@@ -131,7 +131,7 @@ public:
     }
 
 protected:
-    void render_marker(const int x, const int y, marker &marker, const agg::trans_affine & mtx, double opacity=1.0);
+    void render_marker(const int x, const int y, marker &marker, const agg::trans_affine & mtx, double opacity=1.0, bool recenter=true);
 
     Map const& m_;
     Cairo::RefPtr<Cairo::Context> context_;
