@@ -44,6 +44,8 @@ def create_grid_map(width,height):
     r = mapnik.Rule()
     #symb = mapnik.PointSymbolizer()
     symb = mapnik.MarkersSymbolizer()
+    symb.width = 10
+    symb.height = 10
     symb.allow_overlap = True
     r.symbols.append(symb)
     label = mapnik.TextSymbolizer(mapnik.Expression('[Name]'),
