@@ -14,6 +14,11 @@ For a complete change history, see the SVN log.
 Mapnik 2.0.1
 ------------
 
+- Cairo: Add full rendering support for markers to match AGG renderer functionality (#1071)
+
+- Fix Markers rendering so that ellipse height/width units are pixels (previously were unintentially radii) (#1134)
+
+- Added 'ignore-placement` attribute to markers-symbolizer (#1135)
 
 - Switched back to "libmapnik" and "import mapnik" rather than "mapnik2" (#941)
 
